tests/snapshots/test_runner__tests__compiler__typecheck__enum_qualified_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Food = Nut()
enum Tool = Nut()

let nut = Nut()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/enum_qualified_1.kk:4:11
  │
4 │ let nut = Nut()
  │           ^^^ Ambiguous Usage
  │
  = Possible references:

      enum_qualified_1::Food::Nut
      enum_qualified_1::Tool::Nut
